# repo-graph

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo_parse.py  prd.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
codenexus/: __main__.py  cli.py
codenexus/api/: app.py  dependencies.py  serializers.py  watcher.py  websocket.py
codenexus/api/routes/: graph.py  overlays.py  timeline.py
codenexus/graph/: __init__.py  queries.py  schema.py  session.py  store.py
codenexus/ingestion/: diff_snapshot.py  engine.py  git_overlay.py  parser.py
codenexus/ingestion/languages/: base.py  python.py  rust.py  typescript.py
codenexus/mcp/: server.py
codenexus/mcp/tools/: __init__.py  context.py  session.py  structural.py  temporal.py
codenexus/plugins/: base.py  example_security_scanner.py  loader.py
repo_graph/: __main__.py  cli.py
repo_graph/api/: app.py  dependencies.py  watcher.py
repo_graph/api/routes/: graph.py  overlays.py
repo_graph/graph/: __init__.py  queries.py  schema.py  store.py
repo_graph/ingestion/: engine.py  git_overlay.py
repo_graph/mcp/tools/: structural.py
repo_graph/plugins/: loader.py
repo_lens/: __main__.py  cli.py
repo_lens/api/: app.py  dependencies.py  serializers.py  watcher.py
repo_lens/api/routes/: overlays.py
repo_lens/graph/: queries.py  session.py  store.py
repo_lens/ingestion/: parser.py
repo_lens/ingestion/languages/: base.py  python.py  rust.py  typescript.py
repo_lens/mcp/: server.py
repo_lens/mcp/tools/: session.py
repo_lens/plugins/: __init__.py  base.py  example_security_scanner.py
tests/: conftest.py
tests/api/: conftest.py  test_graph_routes.py  test_mcp_sse.py  test_overlay_routes.py  test_timeline_routes.py  test_websocket.py
tests/graph/: test_queries.py  test_schema.py  test_session.py  test_store.py
tests/ingestion/: test_diff_snapshot.py  test_parser.py
tests/ingestion/languages/: test_python.py  test_rust.py  test_typescript.py
tests/mcp/: __init__.py  test_context_tools.py  test_structural_tools.py  test_temporal_tools.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: GraphCanvas.tsx  NodeDetailPanel.tsx  Sidebar.tsx  TimeSlider.tsx
ui/src/hooks/: useGraph.ts  useTimeline.ts  useWebSocket.ts
