[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-lens"
version = "0.1.0"
description = "Transform your codebase into a structured semantic knowledge graph for AI agents and developers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sneh Nagrecha", email = "sneh.nagrecha@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance"
]


dependencies = [
    "click>=8.1.7",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "rustworkx>=0.13.2",
    "pydriller>=2.6",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-rust>=0.24.2",
    "watchdog>=3.0.0",
    "msgpack>=1.0.7",
    "pydantic>=2.5.3",
    "mcp>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/snagrecha/repo-lens"
Repository = "https://github.com/snagrecha/repo-lens.git"
Issues = "https://github.com/snagrecha/repo-lens/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.1",
    "ruff>=0.2.1",
    "httpx>=0.26.0",
]

[project.scripts]
repo-lens = "repo_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["repo_lens"]

[tool.hatch.build.targets.wheel.force-include]
"ui/dist" = "repo_lens/ui"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
